[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
clap = "4.4.10"
itertools = "0.12.0"
nom = "7.1.3"
regex = "1.11.1"
ring-algorithm = "0.7.0"
time = "0.3.30"

[profile.test]
opt-level = 3
